; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_i386_timer.c_timer_call_cpu.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_i386_timer.c_timer_call_cpu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SYNC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @timer_call_cpu(i32 %0, void (i8*)* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca void (i8*)*, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store void (i8*)* %1, void (i8*)** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @cpu_to_cpumask(i32 %7)
  %9 = load i32, i32* @SYNC, align 4
  %10 = load void (i8*)*, void (i8*)** %5, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @mp_cpus_call(i32 %8, i32 %9, void (i8*)* %10, i8* %11)
  ret void
}

declare dso_local i32 @mp_cpus_call(i32, i32, void (i8*)*, i8*) #1

declare dso_local i32 @cpu_to_cpumask(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
